--- a/views/themes/default/index.jade
+++ b/views/themes/default/index.jade
@@ -1,35 +1,43 @@
 extends layout
 
 block content
-	.homepage-container
-		.slideshow
-			#slideshow
-				.slide
-					h2 Realtime & Free
-					.slide-image
-			// #slideshow
-			
-		.login-box
-			.inner-padding
-				img.logo(src='img/logo.png', width='217', height='239', alt='Logo')
-				h3 Free & ready to go web chat room.
-				p
-					a#twitbutt.sb.sb-small.sb-twitter(href="/auth/twitter") 
-						i 
-						| Sign in with Twitter
-					em or
-					a#fbbutt.sb.sb-small.sb-facebook(href="/auth/facebook") 
-						i
-						| Sign in with facebook
+    .homepage-container
+        .slideshow
+            #slideshow
+                .slide
+                    h2 Realtime & Free
+                    .slide-image
+            // #slideshow
 
-		// #login-box 
-	// .homepage-container
-	
-	footer
-		| Balloons.IO is an 
-		a(href='https://github.com/gravityonmars/Balloons.IO', target="_blank") Open Source project 
-		| developed by 
-		a(href='http://twitter.com/gravityonmars', target="_blank") Gravity On Mars.
+        .login-box
+            .inner-padding
+                img.logo(src='img/logo.png', width='217', height='239', alt='Logo')
+                h3 Free & ready to go web chat room.
+                //p
+                //    a#twitbutt.sb.sb-small.sb-twitter(href="/auth/twitter")
+                //        i
+                //        | Sign in with Twitter
+                //    em or
+                //    a#fbbutt.sb.sb-small.sb-facebook(href="/auth/facebook")
+                //        i
+                //        | Sign in with facebook
+                form(action='/login', method='post')
+                  p
+                    label Username:&nbsp;
+                    input.text-grey-small(id='username', type='text', name='username')
+                  p
+                    label Password:&nbsp;
+                    input.text-grey-small(id='password', type='password', name='password')
+                  p
+                    input(type='submit', value='Login', class='button')
+        // #login-box
+    // .homepage-container
 
-	// JavaScript at the bottom for fast page loading 
+    footer
+        | Balloons.IO is an
+        a(href='https://github.com/gravityonmars/Balloons.IO', target="_blank") Open Source project
+        | developed by
+        a(href='http://twitter.com/gravityonmars', target="_blank") Gravity On Mars.
+
+    // JavaScript at the bottom for fast page loading
 
