--- a/views/themes/default/index.jade
+++ b/views/themes/default/index.jade
@@ -13,14 +13,10 @@ block content
             .inner-padding
                 img.logo(src='img/logo.png', width='217', height='239', alt='Logo')
                 h3 Free & ready to go web chat room.
-                //p
-                //    a#twitbutt.sb.sb-small.sb-twitter(href="/auth/twitter")
-                //        i
-                //        | Sign in with Twitter
-                //    em or
-                //    a#fbbutt.sb.sb-small.sb-facebook(href="/auth/facebook")
-                //        i
-                //        | Sign in with facebook
+                p
+                    a#twitbutt.sb.sb-small.sb-facebook(href="/auth/google")
+                        i
+                        | Sign in with Google
                 form(action='/login', method='post')
                   p
                     label Username:&nbsp;
